k8s/poi-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: poi-backend
  name: poi-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: poi-backend
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: poi-backend
    spec:
      containers:
        - env:
            - name: APIFY_ACTOR_EXTRACTOR_ID
              valueFrom:
                secretKeyRef:
                  name: poi-backend-secrets
                  key: APIFY_ACTOR_EXTRACTOR_ID
            - name: APIFY_ACTOR_SCRAPER_ID
              valueFrom:
                secretKeyRef:
                  name: poi-backend-secrets
                  key: APIFY_ACTOR_SCRAPER_ID
            - name: APIFY_KEY
              valueFrom:
                secretKeyRef:
                  name: poi-backend-secrets
                  key: APIFY_KEY
            - name: DATABASE_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: poi-backend-secrets
                  key: DATABASE_PASSWORD
            - name: DATABASE_USER
              valueFrom:
                secretKeyRef:
                  name: poi-backend-secrets
                  key: DATABASE_USER
            - name: DATABASE_HOST
              valueFrom:
                secretKeyRef:
                  name: poi-backend-secrets
                  key: DATABASE_HOST
            - name: DATABASE_NAME
              valueFrom:
                secretKeyRef:
                  name: poi-backend-secrets
                  key: DATABASE_NAME
            - name: DATABASE_MIGRATIONS_PATH
              valueFrom:
                secretKeyRef:
                  name: poi-backend-secrets
                  key: DATABASE_MIGRATIONS_PATH
            - name: PORTS_GRPC_PORT
              valueFrom:
                secretKeyRef:
                  name: poi-backend-secrets
                  key: PORTS_GRPC_PORT
            - name: PORTS_HTTP_PORT
              valueFrom:
                secretKeyRef:
                  name: poi-backend-secrets
                  key: PORTS_HTTP_PORT
            - name: PORTS_HEALTH_PORT
              valueFrom:
                secretKeyRef:
                  name: poi-backend-secrets
                  key: PORTS_HEALTH_PORT
            - name: PORTS_DATABASE_PORT
              valueFrom:
                secretKeyRef:
                  name: poi-backend-secrets
                  key: PORTS_DATABASE_PORT
            - name: TLS_CA_FILE
              value: /app/certs/rootCA.pem
            - name: TLS_CERT_FILE
              value: /app/certs/server.crt
            - name: TLS_KEY_FILE
              value: /app/certs/server.key
          image: marcusnagy/apify-poi-backend:latest
          name: poi-backend
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8081
              protocol: TCP
            - containerPort: 50051
              protocol: TCP
          volumeMounts:
            - mountPath: /app/configs
              name: poi-backend-cm0
            - mountPath: /app/certs
              name: poi-backend-cm1
      restartPolicy: Always
      volumes:
        - configMap:
            name: poi-backend-cm0
          name: poi-backend-cm0
        - configMap:
            name: poi-backend-cm1
          name: poi-backend-cm1
