k8s/poi-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: poi-backend
  name: poi-backend
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
    - name: "8081"
      port: 8081
      targetPort: 8081
    - name: "50051"
      port: 50051
      targetPort: 50051
  selector:
    io.kompose.service: poi-backend
